2009-10-23  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Modified the tests results according to the last changes due
        to the fixes of the bug (r49985):
        https://bugs.webkit.org/show_bug.cgi?id=29697.

        * platform/gtk/editing/execCommand/4916541-expected.txt:
        * platform/gtk/editing/execCommand/5138441-expected.txt:
        * platform/gtk/editing/execCommand/5481523-expected.txt:
        * platform/gtk/editing/execCommand/indent-paragraphs-expected.txt: Added.

2009-10-23  Jon Honeycutt  <jhoneycutt@apple.com>

        MSAA: Name for image elements should use alt attribute text

        https://bugs.webkit.org/show_bug.cgi?id=30727
        <rdar://problem/7328291>

        Reviewed by Alice Liu.

        * platform/win/accessibility/img-alt-attribute-expected.txt: Added.
        * platform/win/accessibility/img-alt-attribute.html: Added.

2009-10-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Update and add test for https://bugs.webkit.org/show_bug.cgi?id=30695
        Drop .tags() support from HTMLCollection

        * fast/dom/HTMLDocument/document-all-expected.txt: Added.
        * fast/dom/HTMLDocument/document-all.html: Added.
        * fast/dom/HTMLDocument/script-tests: Added.
        * fast/dom/HTMLDocument/script-tests/document-all.js: Added.
        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/dom-constructors-expected.txt:
        * fast/dom/dom-constructors.html:
        * fast/dom/domListEnumeration-expected.txt:
        * fast/dom/prototype-inheritance-2-expected.txt:
        * fast/dom/prototype-inheritance-expected.txt:
        * fast/dom/script-tests/domListEnumeration.js:
        * fast/dom/undetectable-document-all-expected.txt:
        * fast/js/global-constructors-expected.txt:

2009-10-23  Alpha Lam  <hclam@chromium.org>

        Reviewed by Eric Carlson.

        Volume slider always starts at half volume