@@ -1,0 +1,12 @@
+<?php
+  header('HTTP/1.0 200 OK');
+  header('Content-type: text/html');
+  header('Refresh: 0;URL=javascript:window.top.location="about:blank"');
+?>
+
+<head>
+<meta http-equiv='refresh' content='0;URL=javascript:window.top.location="about:blank"'/>
+</head>
+<body>
+This is the viewsource iframe.
+</body>
