@@ -1,0 +1,25 @@
+<html>
+<body>
+<script>
+if (window.layoutTestController) {
+  layoutTestController.waitUntilDone();
+  layoutTestController.dumpAsText();
+}
+</script>
+<script>
+function done() {
+  if (window.layoutTestController)
+    layoutTestController.notifyDone();
+}
+
+function loaded() {
+  // Unfortunately need to wait a little to ensure the top level page
+  // transition occurs in the failure case.
+  setTimeout("done()", 1000);
+}
+</script>
+<p>Success - did not redirect to Javascript</p>
+<iframe viewsource src="resources/view-source-no-refresh.php" onload="loaded()">
+</iframe>
+</body>
+</html>
